my first commit on OpenServer

--- a/www/.htaccess
+++ b/www/.htaccess
@@ -1,8 +1,6 @@
 # BEGIN WordPress
 <IfModule mod_rewrite.c>
-
 RewriteEngine On
-
 RewriteBase /
 RewriteRule ^index\.php$ - [L]
 RewriteCond %{REQUEST_FILENAME} !-f
@@ -11,3 +9,9 @@ RewriteRule . /index.php [L]
 </IfModule>
 
 # END WordPress
+
+<IfModule mod_rewrite.c>
+RewriteEngine On
+RewriteCond %{HTTPS} off
+RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+</IfModule>
