--- a/www/.htaccess
+++ b/www/.htaccess
@@ -10,8 +10,11 @@ RewriteRule . /index.php [L]
 
 # END WordPress
 
-<IfModule mod_rewrite.c>
-RewriteEngine On
-RewriteCond %{HTTPS} off
-RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
-</IfModule>
+#<IfModule mod_rewrite.c>
+#RewriteEngine On
+#RewriteCond %{HTTPS} off
+##RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+#RewriteRule ^(.*)$ https://bidqa.com%{REQUEST_URI} [L,R=301]
+#</IfModule>
+
+
